--- a/app/src/main/res/drawable/black_button.xml
+++ b/app/src/main/res/drawable/black_button.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@color/grey_accent"/>
+            <stroke android:width="2dp" android:color="@color/black"/>
             <corners android:radius="20dp"/>
             <solid android:color="@android:color/transparent"/>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:color="@android:color/white"/>
+            <stroke android:width="2dp" android:color="@color/black"/>
             <corners android:radius="20dp"/>
             <solid android:color="@android:color/transparent"/>
         </shape>
