--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Common -->
+    <color name="transparent">#00000000</color>
+    <color name="black">#ff000000</color>
+    <color name="white">#ffffffff</color>
+
     <!-- Nice colors! Some of these are material colors, others not, who cares, as long as they look nice -->
     <color name="copper">#b87333</color>
     <color name="light_blue">#81d4Fa</color>
     <color name="fuchsia">#ff0080</color>
     <color name="mint">#98ff98</color>
+    <color name="dark_grey_cyan">#687672</color>
+    <color name="beige">#f5f5dc</color>
 
     <!-- Grellow - green-yellow -->
     <color name="grellow">#c6bf49</color>
@@ -38,19 +45,33 @@
     <color name="grey_overlay">#7c000000</color>
 
     <!-- Material blues -->
-    <color name="blue_500">#03a9f4</color>
+    <color name="blue_50">#E3F2FD</color>
+    <color name="blue_100">#BBDEFB</color>
+    <color name="blue_200">#90CAF9</color>
+    <color name="blue_300">#64B5F6</color>
+    <color name="blue_400">#42A5F5</color>
+    <color name="blue_500">#2196F3</color>
+    <color name="blue_600">#1E88E5</color>
+    <color name="blue_700">#1976D2</color>
+    <color name="blue_800">#1565C0</color>
+    <color name="blue_900">#0D47A1</color>
 
     <!-- The base colors of the app -->
     <color name="colorPrimary">@color/blue_500</color>
     <color name="colorPrimaryDark">@color/aqua</color>
     <color name="colorAccent">@color/fuchsia</color>
 
-    <!-- Dark -->
-    <color name="dark_blue">#0D47A1</color>
-    <color name="dark_grey">@color/grey_600</color>
-    <color name="dark_red">#B71C1C</color>
-    <color name="dark_orange">#D84315</color>
-    <color name="dark_yellow">#FBC02D</color>
+    <!-- Darks -->
+    <color name="blue_dark">#ff205268</color>
+    <color name="red_dark">#ff630915</color>
+    <color name="green_dark">#ff3a4916</color>
+
+    <!-- Accents -->
+    <color name="blue_accent">#0D47A1</color>
+    <color name="grey_accent">@color/grey_600</color>
+    <color name="magenta_accent">#B71C1C</color>
+    <color name="orange_accent">#D84315</color>
+    <color name="yellow_accent">#FBC02D</color>
 
     <!-- Custom -->
     <color name="maroonish">#d23d5e</color>
@@ -58,7 +79,7 @@
     <color name="gold">#fac003</color>
 
     <!-- Ripple -->
-    <color name="aqua_button_ripple">@color/dark_blue</color>
+    <color name="aqua_button_ripple">@color/blue_accent</color>
     <color name="grey_button_ripple">#CFD8DC</color>
     <color name="magenta_button_ripple">#FFCDD2</color>
     <color name="orange_button_ripple">#FFD180</color>
