--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,47 +17,6 @@
         android:layout_height="match_parent"
         android:background="@drawable/light_splash_background">
 
-        <!--<com.wang.avi.AVLoadingIndicatorView-->
-            <!--android:id="@+id/pacman_loading_indicator"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--style="@style/AVLoadingIndicatorView"-->
-            <!--android:visibility="invisible"-->
-            <!--tools:visibility="visible"-->
-            <!--app:indicatorName="PacmanIndicator"-->
-            <!--android:layout_alignParentEnd="true"-->
-            <!--android:layout_marginEnd="@dimen/margin_massive"-->
-            <!--android:layout_marginTop="@dimen/margin_massive"-->
-            <!--app:indicatorColor="@color/grellow" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/syncing_data_text_view"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:gravity="end"-->
-            <!--android:layout_below="@id/pacman_loading_indicator"-->
-            <!--android:text="@string/syncing_data"-->
-            <!--android:visibility="invisible"-->
-            <!--android:layout_marginEnd="@dimen/margin_mediumer"-->
-            <!--app:charIncrease="1"-->
-            <!--app:typerSpeed="40"-->
-            <!--tools:visibility="visible"-->
-            <!--style="@style/TextStyle.Cabin.Caption.Big" />-->
-
-    <!--<ImageView-->
-        <!--android:id="@+id/ape_to_digital_man_image"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="120dp"-->
-        <!--android:visibility="gone"-->
-        <!--tools:visibility="visible"-->
-        <!--android:clickable="true"-->
-        <!--android:focusable="true"-->
-        <!--app:bounceOnTouch="@{true}"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--app:imageRes="@{viewModel.evolutionImageResId}"-->
-        <!--tools:src="@drawable/man_digital_final"-->
-        <!--android:contentDescription="@string/content_description_evolution_image" />-->
-
         <TextView
             android:id="@+id/retire_heading"
             android:layout_width="match_parent"
@@ -67,14 +26,19 @@
             android:gravity="center"
             android:text="@string/app_name"/>
 
-        <TextView
+        <com.hanks.htextview.typer.TyperTextView
+            android:id="@+id/company_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextStyle.Cabin.Caption.Big"
+            android:gravity="center_horizontal"
+            android:text="@string/splash_caption"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:textColor="@color/black"
-            android:gravity="center"
-            android:layout_below="@id/retire_heading"
-            android:text="@string/splash_caption"/>
+            app:charIncrease="1"
+            app:typerSpeed="40"
+            style="@style/TextStyle.Cabin.Caption.Big"
+            android:layout_below="@id/retire_heading"/>
 
         <View
             android:layout_width="match_parent"
@@ -95,20 +59,6 @@
             style="@style/BlackButtonStyle"/>
 
         <!--<com.hanks.htextview.typer.TyperTextView-->
-            <!--android:id="@+id/company_name"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:gravity="center_horizontal"-->
-            <!--android:layout_marginTop="@dimen/margin_huge"-->
-            <!--android:text="@string/company_name"-->
-            <!--android:visibility="gone"-->
-            <!--app:charIncrease="1"-->
-            <!--app:typerSpeed="40"-->
-            <!--tools:visibility="visible"-->
-            <!--style="@style/TextStyle.Cabin.Heading"-->
-            <!--android:layout_below="@id/ape_to_digital_man_image"/>-->
-
-        <!--<com.hanks.htextview.typer.TyperTextView-->
             <!--android:id="@+id/app_name"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="wrap_content"-->
@@ -118,41 +68,6 @@
             <!--android:visibility="gone"-->
             <!--app:charIncrease="1"-->
             <!--app:typerSpeed="40"-->
-            <!--tools:visibility="visible"-->
-            <!--style="@style/TextStyle.Cabin.Caption.Big" />-->
-
-        <!--<include-->
-            <!--android:id="@+id/black_friday_section"-->
-            <!--layout="@layout/view_black_friday_section"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="@dimen/margin_big"-->
-            <!--app:viewModel="@{viewModel}"-->
-            <!--android:layout_below="@id/app_name"/>-->
-
-        <!--<ImageView-->
-            <!--android:id="@+id/indicating_arrow"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_above="@id/ape_to_digital_man_image"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginBottom="12dp"-->
-            <!--android:layout_marginStart="130dp"-->
-            <!--android:contentDescription="@string/content_description_image_press_me_arrow"-->
-            <!--android:visibility="invisible"-->
-            <!--app:srcCompat="@drawable/ic_diagonal_right_down_arrow"-->
-            <!--tools:ignore="RtlSymmetry"-->
-            <!--tools:visibility="visible" />-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/click_me_to_continue"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_above="@id/indicating_arrow"-->
-            <!--android:layout_marginStart="@dimen/margin_titanic"-->
-            <!--android:layout_marginBottom="@dimen/margin_medium"-->
-            <!--android:text="@string/click_me_to_continue"-->
-            <!--android:visibility="invisible"-->
             <!--tools:visibility="visible"-->
             <!--style="@style/TextStyle.Cabin.Caption.Big" />-->
 
