--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,36 +15,40 @@
         android:id="@+id/root_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/light_splash_background">
+        android:background="@drawable/retire_splash_background">
 
-        <TextView
-            android:id="@+id/retire_heading"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextStyle.IndieFlower.Display2"
-            android:visibility="gone"
-            tools:visibility="visible"
+            android:orientation="vertical"
             android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="@string/app_name"/>
+            android:paddingBottom="@dimen/padding_ginormous">
 
-        <com.hanks.htextview.typer.TyperTextView
-            android:id="@+id/retire_caption"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            tools:text="@string/splash_caption"
-            android:textColor="@color/black"
-            app:charIncrease="1"
-            app:typerSpeed="40"
-            style="@style/TextStyle.Cabin.Caption.Big"
-            android:layout_below="@id/retire_heading"/>
+            <TextView
+                android:id="@+id/retire_heading"
+                style="@style/TextStyle.IndieFlower.Display2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textColor="@color/black"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/light_gradient"/>
+            <com.hanks.htextview.typer.TyperTextView
+                android:id="@+id/retire_caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                tools:text="@string/splash_caption"
+                android:layout_marginBottom="@dimen/margin_ginormouser"
+                android:textColor="@color/dark_slate_blue"
+                app:charIncrease="1"
+                app:typerSpeed="70"
+                style="@style/TextStyle.Cabin.Caption.Big"/>
+
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/continue_button"
@@ -54,11 +58,11 @@
             app:bounceOnTouch="@{true}"
             android:visibility="gone"
             tools:visibility="visible"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_marginBottom="@dimen/margin_massive"
+            android:layout_marginLeft="@dimen/margin_gicantic"
+            android:layout_marginRight="@dimen/margin_gicantic"
+            android:layout_marginBottom="@dimen/margin_ginormous"
             android:text="@string/splash_button_text"
-            style="@style/BlackButtonStyle"/>
+            style="@style/MagentaButtonStyle"/>
 
     </RelativeLayout>
 
