Cleanup and bit more work on the Splash Activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,59 +7,32 @@
     <data>
 
         <variable
+            name="presenter"
+            type="laurcode.com.retire.main.presenter.MainPresenter" />
+
+        <variable
             name="viewModel"
             type="laurcode.com.retire.main.viewmodel.MainViewModel" />
 
     </data>
 
-    <android.support.design.widget.CoordinatorLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        tools:context="laurcode.com.retire.main.view.MainActivity">
+        android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/app_bar"
+        <!-- Insert edit forms here -->
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
-            android:fitsSystemWindows="true"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:toolbarId="@+id/toolbar">
-
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-            </android.support.design.widget.CollapsingToolbarLayout>
-
-        </android.support.design.widget.AppBarLayout>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom|end"
-            app:srcCompat="@android:drawable/ic_dialog_email" />
+            style="@style/TextStyle.IndieFlower.Display2"
+            android:textColor="@color/black"
+            android:text="This is the best Retirement app!"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:layout_marginLeft="@dimen/margin_huge"
+            android:layout_marginRight="@dimen/margin_huge"/>
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/app_bar_height"/>
-
-    </android.support.design.widget.CoordinatorLayout>
+    </RelativeLayout>
 
 </layout>
